fix side bar not showing correct height

--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -255,7 +255,7 @@ footer{
 }
 
 #mySideBar{
-    height:67%;
+    height:70%;
     top:20%;
     z-index: 1;
 }
